--- a/assets/style.css
+++ b/assets/style.css
@@ -34,6 +34,10 @@ body {
 .container {
   max-width: 720px !important;
 }
+.font-bold{
+  font-weight: bold !important ; 
+}
+
 
 /* end of general classed */
 
