--- a/assets/style.css
+++ b/assets/style.css
@@ -75,3 +75,48 @@ body {
   width: 200px ;
   top: -16px;
 }
+
+
+/* ============== WELCOME PAGE STYLES ================= */
+.thank-you{
+  font-size: 7rem;
+  margin-top: 120px;
+}
+.logo{
+  width: 150px;
+  margin-top: 150px;
+}
+.order-done{
+  font-size: 2.5rem;
+}
+
+.background-primary{
+  background-color: #ed0c72;
+}
+.btn-home{
+  width: 55%;
+  font-size: 2.5rem;
+  border-radius: 10px;
+  margin-top: 150px;
+}
+
+.landing_home{
+  background-image: url('../images/background1.svg');
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover;
+}
+
+.icon{
+  width: 20px;
+}
+
+.footer{
+  font-size: 1.5rem;
+  margin-top: 150px;
+  margin-bottom: 40px;
+}
+
+.image{
+  width: 90%;
+}
