--- a/assets/style.css
+++ b/assets/style.css
@@ -55,7 +55,7 @@ body {
 
 .landing {
   height: 450px !important;
-  background-image: url(../images/Untitled.jpg);
+  background-image: url(../images/1.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
