--- a/assets/style.css
+++ b/assets/style.css
@@ -25,27 +25,34 @@ html {
 
 body {
   font-family: 'Emirates';
-  font-size: 12px ;
+  font-size: 12px;
 }
-.primary{
+
+.primary {
   color: #ed0c72 !important;
 }
-.bg-primary{
+
+.bg-primary {
   background-color: #ed0c72 !important;
 }
-.pt-6{
+
+.pt-6 {
   padding-top: 60px;
 }
+
 .container {
   max-width: 720px !important;
 }
-.font-bold{
-  font-weight: bold !important ; 
+
+.font-bold {
+  font-weight: bold !important;
 }
-.font-size-5{
-  font-size: 45px ;
+
+.font-size-5 {
+  font-size: 45px;
 }
-.bg-gray{
+
+.bg-gray {
   background-color: rgb(216, 216, 216);
 }
 
@@ -69,57 +76,68 @@ body {
   border-radius: 6px;
   bottom: -50px;
 }
-.WH{
+
+.WH {
   left: calc(50% - var(--diameter2)/2);
   color: white;
-  width: 200px ;
+  width: 200px;
   top: -16px;
 }
-.boxShadow{
-   box-shadow: 0 -5px 10px -6px gray;
+
+.boxShadow {
+  box-shadow: 0px -5px 10px -6px gray;
+}
+
+.boxShadowd {
+  box-shadow: 0px 5px 10px -6px gray;
 }
 
 
 /* ============== WELCOME PAGE STYLES ================= */
-.thank-you{
+.thank-you {
   font-size: 7rem;
   margin-top: 120px;
 }
-.logo{
+
+.logo {
   width: 150px;
   margin-top: 150px;
 }
-.order-done{
+
+.order-done {
   font-size: 2.5rem;
 }
 
-.background-primary{
+.background-primary {
   background-color: #ed0c72;
 }
-.btn-home{
+
+.btn-home {
   width: 55%;
   font-size: 2.5rem;
   border-radius: 10px;
   margin-top: 150px;
 }
 
-.landing_home{
+.landing_home {
   background-image: url('../images/background1.svg');
-  background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
+  background-position: center;
+  /* Center the image */
+  background-repeat: no-repeat;
+  /* Do not repeat the image */
   background-size: cover;
 }
 
-.icon{
+.icon {
   width: 20px;
 }
 
-.footer{
+.footer {
   font-size: 1.5rem;
   margin-top: 150px;
   margin-bottom: 40px;
 }
 
-.image{
+.image {
   width: 90%;
 }
