--- a/assets/style.css
+++ b/assets/style.css
@@ -65,6 +65,10 @@ body {
   background-color: #fa56a0;
   color: white;
 }
+.bg-custom{
+  background-color: #fa56a0;
+  color: white;
+}
 /* end of general classed */
 
 
